[package]
name = "cywave"
version = "0.2.0"
edition = "2021"
authors = ["Cybrium AI <hello@cybrium.ai>"]
description = "Wireless RF sensor — Wi-Fi, BLE, Zigbee, LoRaWAN, Drone detection"
license = "Apache-2.0"
repository = "https://github.com/cybrium-ai/cywave"
[[bin]]
name = "cywave"
path = "src/main.rs"
[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
[profile.release]
opt-level = 3
lto = true
strip = true
